--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_LoginPartial.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_LoginPartial.cshtml
@@ -14,6 +14,9 @@
             <button id="logout" type="submit" class="nav-link btn btn-link text-dark">Logout</button>
         </form>
     </li>
+    <li class="nav-item">
+        <a class="nav-link text-dark" asp-controller="Toll" asp-action="Contracts">Contracts</a>
+    </li>
 }
 else
 {
