--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
@@ -1,41 +1,45 @@
 ﻿@using CSISD_Toll_Operator_Assignment.Models
+@using Microsoft.AspNetCore.Mvc.Localization
+
+@inject IViewLocalizer Localizer
+
 @model IndexViewModel
 @{
-    ViewData["Title"] = "Home";
+	ViewData["Title"] = @Localizer["Home"];
 }
 
 <div class="container">
-    <h7 class="mb-5 font-weight-bold">Customer ID: @Model.UserId</h7>
-    <hr />
-    <table id="data-table" class="table table-hover table-bordered mt-5 table-sm">
-        <thead>
-            <tr>
-                <th class="text-center" colspan="4">Unpaid Tolls</th>
-            </tr>
-            <tr>
-                <th scope="col">Entry</th>
-                <th scope="col">Exit</th>
-                <th scope="col">Charge</th>
-                <th scope="col">Paid</th>
-            </tr>
-        </thead>
-        <tbody>
-            @{
-                foreach (var invoice in Model.Invoices)
-                {
-                    <tr>
-                        <td>@invoice.EntryTimestamp</td>
-                        <td>@invoice.ExitTimestamp</td>
-                        <td>£@invoice.Fee</td>
-                        <td>
-                            <div class="d-flex justify-content-between align-items-center">
-                                @(invoice.Paid ? "✔" : "❌")
-                                <a href="/Toll/Payment?invoiceId=@invoice.Id" class="btn btn-sm btn-primary ml-5">Pay</a>
-                            </div>
-                        </td>
-                    </tr>
-                }
-            }
-        </tbody>
-    </table>
+	<h7 class="mb-5 font-weight-bold">@Localizer["Customer ID: {0}", Model.UserId]</h7>
+	<hr />
+	<table id="data-table" class="table table-hover table-bordered mt-5 table-sm">
+		<thead>
+			<tr>
+				<th class="text-center" colspan="4">@Localizer["Unpaid Tolls"]</th>
+			</tr>
+			<tr>
+				<th scope="col">@Localizer["Entry"]</th>
+				<th scope="col">@Localizer["Exit"]</th>
+				<th scope="col">@Localizer["Charge"]</th>
+				<th scope="col">@Localizer["Paid"]</th>
+			</tr>
+		</thead>
+		<tbody>
+			@{
+				foreach (var invoice in Model.Invoices)
+				{
+					<tr>
+						<td>@invoice.EntryTimestamp</td>
+						<td>@invoice.ExitTimestamp</td>
+						<td>£@invoice.Fee</td>
+						<td>
+							<div class="d-flex justify-content-between align-items-center">
+								@(invoice.Paid ? "✔" : "❌")
+								<a href="/Toll/Payment?invoiceId=@invoice.Id" class="btn btn-sm btn-primary ml-5">@Localizer["Pay"]</a>
+							</div>
+						</td>
+					</tr>
+				}
+			}
+		</tbody>
+	</table>
 </div>
