Change header styling

--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_Layout.cshtml
@@ -1,5 +1,8 @@
 ﻿@using CSISD_Toll_Operator_Assignment.Service
-@inject PreferenceService preferenceService 
+@using Microsoft.AspNetCore.Identity
+@inject PreferenceService preferenceService
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <!DOCTYPE html>
 <html lang="en">
@@ -9,55 +12,75 @@
     <title>@ViewData["Title"] - Nordic Tolling Service</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
+    <link rel="stylesheet" href="~/font-awesome-4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/dataTables.bootstrap4.min.css" />
 </head>
 <body>
-    <header>
-        <div class="row">
-            <div class="col">
-                <img class="stockPhoto" src="~/Images/pic1.jpg" />
+    <header class="container">
+        <div class="row mt-3 mb-3">
+            <div class="col-3 d-flex">
+                <img class="img-thumbnail" alt="Header image" src="~/Images/header.jpg" />
             </div>
-            <div class="col-10">
-                <div class="row">
-                    <div class="col-8">
-                        <h1>Nordic Department of Transport</h1>
+            <div class="col-9">
+                <div class="row mb-2">
+                    <div class="col-7">
+                        <h1 class="font-weight-bold">Nordic Department of Transport</h1>
                     </div>
-                    <div class="col-4">
-                        <select name="languages" id="languages-select">
+                    <div class="col-5">
+                        <select class="custom-select mb-1" name="languages" id="languages-select">
                             <option value="english">English</option>
                             <option value="french">French</option>
                         </select>
-                        <a href="#"><i class="fa fa-search-plus fa-2x" aria-hidden="true"></i></a>
-                        <a href="#"><i class="fa fa-search-minus fa-2x" aria-hidden="true"></i></a>
+                        <div class="d-flex justify-content-end">
+                            <form method="post">
+                                <button title="Increase font size by 5%" type="button" class="btn btn-link">
+                                    <i class="fa fa-search-plus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </form>
+                            <form method="post">
+                                <button title="Decrease font size by 5%" type="button" class="btn btn-link">
+                                    <i class="fa fa-search-minus fa-2x" aria-hidden="true"></i>
+                                </button>
+                            </form>
+                        </div>
+                        <div class="d-flex justify-content-end">
+                            <small>@preferenceService.GetMagnification()%</small>
+                        </div>
                     </div>
                 </div>
-                <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                    <a class="navbar-brand" href="#">Navbar</a>
-                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <nav style="padding-top: 18px;" class="navbar navbar-expand-lg navbar-dark bg-dark">
+                    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                        <ul class="navbar-nav mr-auto">
+                    <div class="collapse navbar-collapse" id="navbarNav">
+                        <ul class="navbar-nav">
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a  class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="TollHistory">Toll History</a>
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
+                            </li>
+                            @if (SignInManager.IsSignedIn(User) && !User.IsInRole("admin"))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Toll" asp-action="TollHistory">Toll History</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link" asp-area="" asp-controller="Toll" asp-action="Contracts">Contracts</a>
+                                </li>
+                            }
+                            <li class="nav-item">
+                                <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                             </li>
                             <partial name="_LoginPartial" />
-                            <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                            </li>
                         </ul>
-                        <form class="form-inline my-2 my-lg-0">
-                            <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-                        </form>
                     </div>
                 </nav>
             </div>
         </div>
     </header>
+
+    <hr/>
+
     <div class="container">
         <main role="main" class="pb-3">
             @RenderBody()
