--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_LoginPartial.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Shared/_LoginPartial.cshtml
@@ -44,7 +44,7 @@
 else
 {
     <li class="nav-item">
-        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav-link" id="register" asp-area="Identity" asp-page="/Account/Register">Register Road User</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" id="login" asp-area="Identity" asp-page="/Account/Login">Login</a>
