--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/Account/Logout.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/Account/Logout.cshtml
@@ -1,10 +1,12 @@
 ﻿@page
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 @model LogoutModel
 @{
-    ViewData["Title"] = "Log out";
+    ViewData["Title"] = Localizer["Log out"];
 }
 
 <header>
     <h1>@ViewData["Title"]</h1>
-    <p>You have successfully logged out of the application.</p>
+    <p>@Localizer["You have successfully logged out of the application."]</p>
 </header>
