--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/Account/Manage/_Layout.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+@{
     if (ViewData.TryGetValue("ParentLayout", out var parentLayout))
     {
         Layout = (string)parentLayout;
@@ -9,10 +11,10 @@
     }
 }
 
-<h2>Manage your account</h2>
+<h2>@Localizer["Manage your account"]</h2>
 
 <div>
-    <h4>Change your account settings</h4>
+    <h4>@Localizer["Change your account settings"]</h4>
     <hr />
     <div class="row">
         <div class="col-md-3">
