--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,10 +1,13 @@
-﻿<ul class="nav nav-pills flex-column">
-    <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">Profile</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">Email</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">Password</a></li>
-    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">Personal data</a></li>
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+<ul class="nav nav-pills flex-column">
+    <li class="nav-item"><a class="nav-link @ManageNavPages.IndexNavClass(ViewContext)" id="profile" asp-page="./Index">@Localizer["Profile"]</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.EmailNavClass(ViewContext)" id="email" asp-page="./Email">@Localizer["Email"]</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.ChangePasswordNavClass(ViewContext)" id="change-password" asp-page="./ChangePassword">@Localizer["Password"]</a></li>
+    <li class="nav-item"><a class="nav-link @ManageNavPages.PersonalDataNavClass(ViewContext)" id="personal-data" asp-page="./PersonalData">@Localizer["Personal data"]</a></li>
     @if (this.User.IsInRole("road-user"))
     {
-        <li class="nav-item"><a class="nav-link" asp-controller="Toll" asp-action="AddCard">Add New Card</a></li>
+        <li class="nav-item"><a class="nav-link" asp-controller="Toll" asp-action="AddCard">@Localizer["Add New Card"]</a></li>
     }
 </ul>
