--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexTollOperator.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexTollOperator.cshtml
@@ -1,19 +1,22 @@
-﻿@{
-    ViewData["Title"] = "Home";
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
+@{
+    ViewData["Title"] = Localizer["Home"];
 }
 
 <div class="container">
     <table id="data-table" class="table table-hover table-bordered mt-2 table-sm">
         <thead>
             <tr>
-                <th class="text-center" colspan="6">Unpaid User Tolls</th>
+                <th class="text-center" colspan="6">@Localizer["Unpaid User Tolls"]</th>
             </tr>
             <tr>
-                <th scope="col">User ID</th>
-                <th scope="col">Entry</th>
-                <th scope="col">Exit</th>
-                <th scope="col">Charge</th>
-                <th scope="col">Paid</th>
+                <th scope="col">@Localizer["User ID"]</th>
+                <th scope="col">@Localizer["Entry"]</th>
+                <th scope="col">@Localizer["Exit"]</th>
+                <th scope="col">@Localizer["Charge"]</th>
+                <th scope="col">@Localizer["Paid"]</th>
             </tr>
         </thead>
         <tbody>
