--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/TollHistoryTollOperator.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/TollHistoryTollOperator.cshtml
@@ -1,20 +1,22 @@
 ﻿@using CSISD_Toll_Operator_Assignment.Models
+@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
 @model TollHistoryViewModel
 @{
-    ViewData["Title"] = "TollHistory";
+    ViewData["Title"] = Localizer["Toll History"];
 }
 <div class="container">
     <table id="data-table" class="table table-hover table-bordered mt-2 table-sm">
         <thead>
             <tr>
-                <th class="text-center" colspan="6">Toll History</th>
+                <th class="text-center" colspan="6">@Localizer["Toll History"]</th>
             </tr>
             <tr>
-                <th scope="col">User ID</th>
-                <th scope="col">Entry</th>
-                <th scope="col">Exit</th>
-                <th scope="col">Charge</th>
-                <th scope="col">Paid</th>
+                <th scope="col">@Localizer["User ID"]</th>
+                <th scope="col">@Localizer["Entry"]</th>
+                <th scope="col">@Localizer["Exit"]</th>
+                <th scope="col">@Localizer["Charge"]</th>
+                <th scope="col">@Localizer["Paid"]</th>
             </tr>
         </thead>
         <tbody>
