Remove Pay button when invoice is paid

--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Home/IndexRoadUser.cshtml
@@ -34,7 +34,10 @@
 						<td>
 							<div class="d-flex justify-content-between align-items-center">
 								@(invoice.Paid ? "✔" : "❌")
-								<a href="/Toll/Payment?invoiceId=@invoice.Id" class="btn btn-sm btn-primary ml-5">@Localizer["Pay"]</a>
+								@if (!invoice.Paid)
+								{
+									<a href="/Toll/Payment?invoiceId=@invoice.Id" class="btn btn-sm btn-primary ml-5">@Localizer["Pay"]</a>
+								}
 							</div>
 						</td>
 					</tr>
