--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/AddCard.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/AddCard.cshtml
@@ -9,7 +9,7 @@
 <div class="container">
     <div>
         <h1>@ViewData["Title"]</h1>
-        <p>Use this page to add a new payment card.</p>
+        <p>@Localizer["Use this page to add a new payment card."]</p>
     </div>
     <hr />
     <div class="row">
