--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Contracts.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/Contracts.cshtml
@@ -1,9 +1,11 @@
-﻿
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@inject IViewLocalizer Localizer
+
 @{
-    ViewData["Title"] = "Contracts";
+    ViewData["Title"] = Localizer["Contracts"];
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="container">
-    <h1>Contracts</h1>
-    <p>Please login to view this page</p>
+    <h1>@Localizer["Contracts"]</h1>
+    <p>@Localizer["Please login to view this page"]</p>
 </div>
