--- a/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/TollHistoryRoadUser.cshtml
+++ b/CSISD-Tolling-System/CSISD_Toll_Operator_Assignment/Views/Toll/TollHistoryRoadUser.cshtml
@@ -7,7 +7,7 @@
 }
 
 <div class="container">
-    <h7 class="mb-5 font-weight-bold">Customer ID: @Model.UserId</h7>
+    <h7 class="mb-5 font-weight-bold">@Localizer["Customer ID: {0}", Model.UserId]</h7>
     <hr />
     <table id="data-table" class="table table-hover table-bordered mt-5 table-sm">
         <thead>
